Addes services page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="INSPIRO" />    
 	<meta name="description" content="Themeforest Template Polo">
-    <link rel="icon" type="image/png" href="images/favicon.png">   
+    <link rel="icon" type="image/png" href="images/favicon.jpg">   
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Document title -->
     <title>About Us | KWALITY GLASS AND INTERIORS</title>
@@ -60,80 +60,7 @@
                             <nav>
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li class="dropdown"><a href="products.html">Products</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="dropdown-submenu"><a href="products.html#wealso">INTERIOR GLASS PRODUCTS</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#lacqueredglass">Lacquered Glass</a></li>
-                                                    <li><a href="products.html#laminatedglass">Laminated Glass</a></li>
-                                                    <li><a href="products.html#showercubicles">Shower Cubicles & Enclosures</a></li>
-                                                    <li><a href="products.html#glassblocks">Glass Blocks</a></li>
-                                                    <li><a href="products.html#stainglass">Stain Glass</a></li>
-                                                    <li><a href="products.html#digitalprint">Digital Print Glass</a></li>
-                                                    <li><a href="products.html#selfdesign">Self Design Glass</a></li>
-                                                    <li><a href="products.html#tabletop">Table Top Glass</a></li>
-                                                    <li><a href="products.html#temperedglass">Tempered Glass</a></li>
-                                                    <li><a href="products.html#bentglass">Bent Glass</a></li>
-                                                    <li><a href="products.html#mirrors">Mirrors</a></li>
-                                                    <li><a href="products.html#tintedglass">Tinted Glass</a></li>
-                                                    <li><a href="products.html#glassstair">Glass Staircases</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#structuralglazing">Structural Glazing</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#facadeglazing">Facade Glazing</a></li>
-                                                    <li><a href="products.html#canopyglazing">Canopy Glazing</a></li>
-                                                    <li><a href="products.html#skylightglazing">Skylight Glazing</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#curtainwalls">Curtain Walls</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#fullyunitized">Conventional Fully Unitized Glazing</a></li>
-                                                    <li><a href="products.html#seminitized">Conventional Semi Unitized Glazing</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#spiderglazing">Spider Glazing</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#spiderglazingsystem">Spider Glazing System</a></li>
-                                                    <li><a href="products.html#shopfronts">Shop Fronts</a></li>
-                                                    <li><a href="products.html#glasscanopy">Glass Canopies</a></li>
-                                                    <li><a href="products.html#structuralglazingsystem">Structural Glass Fin System</a></li>
-                                                    <li><a href="products.html#pointfixingfacade">Point Fixing Facade</a></li>
-                                                    <li><a href="products.html#tensionrodsystem">Tension Rod System</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#aluminiumwallcladding">ALUMINIUM & OTHER WALL CLADDINGS</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#acpcladding">ACP Cladding</a></li>
-                                                    <li><a href="products.html#hplcladding">HPL Cladding</a></li>
-                                                    <li><a href="products.html#wallcladding">WALL Cladding</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#aluminiumupvc">ALUMINIUM & UPVC-DOORS & WINDOWS</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#slidingdoors">Sliding Doors & Windows</a></li>
-                                                    <li><a href="products.html#casementwindows">Casement Windows</a></li>
-                                                    <li><a href="products.html#frenchwindows">French Windows</a></li>
-                                                    <li><a href="products.html#aluminiumdoorswindows">Doors & Windows</a>
-                                                        <li><a href="products.html#aluminiumdoorswindows">Aluminium Doors & Windows</a></li>
-                                                        <li><a href="products.html#upvcdoorswindows">UPVC Doors & Windows</a></li>
-                                                        <li><a href="products.html#foldableglassdoors">Foldable Glass Doors
-                                                        </a></li>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#framelessglassapplications">FRAMELESS GLASS APPLICATIONS</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#glassdoorshower">Glass Doors Shower Cubicles</a></li>
-                                                    <li><a href="products.html#interiorpartitions">Interior Partitions</a></li>
-                                                    <li><a href="products.html#glasssliding">Glass Sliding Systems</a></li>
-                                                    <li><a href="products.html#glassfolding">Glass Folding Systems</a></li>
-                                                    <li><a href="products.html#ssglass">SS Glass Railings</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="projects.html">Projects</a></li>
+                                    <li><a href="services.html">Services</a></li>
                                     <li><a href="about.html">About Us</a></li>                                    
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
@@ -160,7 +87,7 @@
         <!-- end: Page title -->
         <section class="p-b-10">
             <div class="container">
-				<strong>Welcome to Kwality Glass And Interior: </strong>Precision in Every Detail<br>
+				<h4>Welcome to Kwality Glass And Interior: </h4><strong>Precision in Every Detail</strong><br>
 				At Kwality Glass and Interiors, we are more than just a company; we are creators of spaces that inspire. With a rich legacy we have made it our mission to transform the ordinary into the extraordinary. Our journey began with a profound passion for design and a vision to craft interiors that tell stories, evoke emotions, and redefine aesthetics.<br><br>
                 <div class="row">
                     <div class="col-lg-6">
@@ -254,7 +181,7 @@
 							<img src="images/logo14.jpg" alt="Logo">
 						</div>
 						<img id="logo" src="images/logo.jpg" width="50" height="auto" style="float:left; border-radius: 6px;">
-                        <div class="copyright-text text-center"> &copy; 2023 KWALITY GLASS - Complete Facade Solutions. All Rights Reserved.
+                        <div class="copyright-text text-center"> &copy; 2023 KWALITY GLASS AND INTERIOR. All Rights Reserved.
                         </div>
                     </div>
                 </div>
