--- a/index.html
+++ b/index.html
@@ -71,80 +71,7 @@
                             <nav>
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li class="dropdown"><a href="products.html">Products</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="dropdown-submenu"><a href="products.html#wealso">INTERIOR GLASS PRODUCTS</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#lacqueredglass">Lacquered Glass</a></li>
-                                                    <li><a href="products.html#laminatedglass">Laminated Glass</a></li>
-                                                    <li><a href="products.html#showercubicles">Shower Cubicles & Enclosures</a></li>
-                                                    <li><a href="products.html#glassblocks">Glass Blocks</a></li>
-                                                    <li><a href="products.html#stainglass">Stain Glass</a></li>
-                                                    <li><a href="products.html#digitalprint">Digital Print Glass</a></li>
-                                                    <li><a href="products.html#selfdesign">Self Design Glass</a></li>
-                                                    <li><a href="products.html#tabletop">Table Top Glass</a></li>
-                                                    <li><a href="products.html#temperedglass">Tempered Glass</a></li>
-                                                    <li><a href="products.html#bentglass">Bent Glass</a></li>
-                                                    <li><a href="products.html#mirrors">Mirrors</a></li>
-                                                    <li><a href="products.html#tintedglass">Tinted Glass</a></li>
-                                                    <li><a href="products.html#glassstair">Glass Staircases</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#structuralglazing">Structural Glazing</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#facadeglazing">Facade Glazing</a></li>
-                                                    <li><a href="products.html#canopyglazing">Canopy Glazing</a></li>
-                                                    <li><a href="products.html#skylightglazing">Skylight Glazing</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#curtainwalls">Curtain Walls</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#fullyunitized">Conventional Fully Unitized Glazing</a></li>
-                                                    <li><a href="products.html#seminitized">Conventional Semi Unitized Glazing</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#spiderglazing">Spider Glazing</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#spiderglazingsystem">Spider Glazing System</a></li>
-                                                    <li><a href="products.html#shopfronts">Shop Fronts</a></li>
-                                                    <li><a href="products.html#glasscanopy">Glass Canopies</a></li>
-                                                    <li><a href="products.html#structuralglazingsystem">Structural Glass Fin System</a></li>
-                                                    <li><a href="products.html#pointfixingfacade">Point Fixing Facade</a></li>
-                                                    <li><a href="products.html#tensionrodsystem">Tension Rod System</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#aluminiumwallcladding">ALUMINIUM & OTHER WALL CLADDINGS</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#acpcladding">ACP Cladding</a></li>
-                                                    <li><a href="products.html#hplcladding">HPL Cladding</a></li>
-                                                    <li><a href="products.html#wallcladding">WALL Cladding</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#aluminiumupvc">ALUMINIUM & UPVC-DOORS & WINDOWS</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#slidingdoors">Sliding Doors & Windows</a></li>
-                                                    <li><a href="products.html#casementwindows">Casement Windows</a></li>
-                                                    <li><a href="products.html#frenchwindows">French Windows</a></li>
-                                                    <li><a href="products.html#aluminiumdoorswindows">Doors & Windows</a>
-                                                        <li><a href="products.html#aluminiumdoorswindows">Aluminium Doors & Windows</a></li>
-                                                        <li><a href="products.html#upvcdoorswindows">UPVC Doors & Windows</a></li>
-                                                        <li><a href="products.html#foldableglassdoors">Foldable Glass Doors
-                                                        </a></li>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown-submenu"><a href="products.html#framelessglassapplications">FRAMELESS GLASS APPLICATIONS</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="products.html#glassdoorshower">Glass Doors Shower Cubicles</a></li>
-                                                    <li><a href="products.html#interiorpartitions">Interior Partitions</a></li>
-                                                    <li><a href="products.html#glasssliding">Glass Sliding Systems</a></li>
-                                                    <li><a href="products.html#glassfolding">Glass Folding Systems</a></li>
-                                                    <li><a href="products.html#ssglass">SS Glass Railings</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="projects.html">Projects</a></li>
+                                    <li><a href="services.html">Services</a></li>
                                     <li><a href="about.html">About Us</a></li>                                    
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
@@ -180,23 +107,11 @@
                         <img src="interiorimages/interior1.jpg" class="img-fluid" alt="Interior Image 1">
                     </div>
                 </div><br><br>
-                <!-- <div class="row m-t-40">
-                    <div class="col-lg-4">
-                        <img src="interiorimages/interior4.jpg" class="img-fluid" alt="Interior Image 4">
-                    </div>
-                    <div class="col-lg-4">
-                        <img src="interiorimages/interior3.jpg" class="img-fluid" alt="Interior Image 3">
-                    </div>
-                    <div class="col-lg-4">
-                        <img src="interiorimages/interior2.jpg" class="img-fluid" alt="Interior Image 2">
-                    </div>
-
-                </div> -->
                 <div class="carousel" data-items="3" data-dots="false"> 
                     <img src="interiorimages/interior5.jpg" alt="Interior" class="accordion-image">
-                    <img src="interiorimages/interior2.jpg" alt="HPL Cladding" class="accordion-image">
-                    <img src="interiorimages/interior3.jpg" alt="HPL Cladding" class="accordion-image">
-                    <img src="interiorimages/interior4.jpg" alt="HPL Cladding" class="accordion-image">
+                    <img src="interiorimages/interior2.jpg" alt="Interior" class="accordion-image">
+                    <img src="interiorimages/interior3.jpg" alt="Interior" class="accordion-image">
+                    <img src="interiorimages/interior4.jpg" alt="Interior" class="accordion-image">
                 </div>
             </div>
         </section>
@@ -215,7 +130,7 @@
                                     <h4>Custom Glass Solutions</h4> Our expertise in custom glass solutions encompasses a wide range of possibilities. From exquisite glass partitions that redefine spaces to stylish glass railings that offer both safety and sophistication, we tailor our glasswork to your unique needs. Whether it's intricate stained glass designs or sleek frameless shower enclosures, we craft glass elements that elevate your interiors to a new level of elegance.<br>
                                     <h4>Interior Design Excellence</h4> Our interior design services are a harmonious blend of creativity and functionality. We believe that exceptional design should not only captivate the eye but also enhance daily living. Our team of skilled designers works closely with you to curate interiors that reflect your individuality and lifestyle. From concept to execution, we transform your vision into a tangible reality, creating spaces that are not just beautiful but also practical.<br>
                                     <h4>Professionalism and Quality Assurance</h4> At Kwality Glass and Interiors, our commitment to professionalism and quality is unwavering. We prioritize precision in every project, ensuring that our work stands the test of time. We source the finest materials, employ skilled craftsmen, and adhere to the highest industry standards to deliver results that surpass expectations. Our track record of excellence and satisfied clients speaks to our dedication to quality in every facet of our services.<br><br>
-									<a href="products.html" class="explore">Explore Our Services</a>
+									<a href="services.html" class="explore">Explore Our Services</a>
 								</div>
                             </div>
                         </div>
@@ -263,7 +178,7 @@
 							<img src="images/logo14.jpg" alt="Logo">
 						</div>
 						<img id="logo" src="images/logo.jpg" width="50" height="auto" style="float:left; border-radius: 6px;">
-                        <div class="copyright-text text-center"> &copy; 2023 KWALITY GLASS - Complete Facade Solutions. All Rights Reserved.
+                        <div class="copyright-text text-center"> &copy; 2023 KWALITY GLASS AND INTERIOR. All Rights Reserved.
                         </div>
                     </div>
                 </div>
