--- a/services.html
+++ b/services.html
@@ -155,7 +155,78 @@
 							<span class="lead">Your satisfaction is our top priority. We collaborate closely with you throughout the design and installation process, ensuring that your unique vision is fully realized. Our client-centric approach means that your needs, preferences, and feedback guide every aspect of our services.</span>
 						</div>
 					</div><br>
+				
+				<h4 id="furniture">Discover Exceptional Furniture at Kwality Glass and Interiors</h4>
+				<div>
+					<span class="lead">At Kwality Glass and Interiors, we believe that furniture is more than just functional pieces; it's an integral part of your living spaces, reflecting your style, comfort, and personality. Our carefully curated collection of furniture combines aesthetics, craftsmanship, and functionality to enhance the beauty and functionality of your interiors.</span>
 				</div>
+				<h4>Our Furniture Collections</h4>
+				<h5><strong>Elegant Living Room Furniture</strong></h5>
+				<div>
+					<span class="lead">Create a welcoming and stylish living room with our exquisite collection of sofas, coffee tables, and entertainment units. Whether you prefer modern minimalism or classic sophistication, our living room furniture sets the stage for memorable gatherings and relaxation.</span>
+				</div>
+				<div class="carousel" data-items="3" data-dots="false"> 
+					<img src="interiorimages/living1.jpg" alt="Living" class="accordion-image">
+					<img src="interiorimages/living2.jpg" alt="Living" class="accordion-image">
+					<img src="interiorimages/living3.jpg" alt="Living" class="accordion-image">
+					<img src="interiorimages/living4.jpg" alt="Living" class="accordion-image">
+				</div>
+				<h5><strong>Sophisticated Dining Sets</strong></h5>
+				<div>
+					<span class="lead">Elevate your dining experience with our range of dining tables and chairs. From contemporary designs to timeless classics, our dining furniture brings both elegance and functionality to your meals.</span>
+				</div>
+				<div class="carousel" data-items="3" data-dots="false"> 
+					<img src="interiorimages/dining1.jpg" alt="Dining" class="accordion-image">
+					<img src="interiorimages/dining2.jpg" alt="Dining" class="accordion-image">
+					<img src="interiorimages/dining3.jpg" alt="Dining" class="accordion-image">
+					<img src="interiorimages/dining4.jpg" alt="Dining" class="accordion-image">
+				</div>
+				<h5><strong>Bedroom Bliss</strong></h5>
+				<div>
+					<span class="lead">Transform your bedroom into a sanctuary of comfort and style with our bedroom furniture. Explore a variety of bed frames, dressers, nightstands, and wardrobes that offer storage solutions without compromising on aesthetics.</span>
+				</div>
+				<div class="carousel" data-items="3" data-dots="false"> 
+					<img src="interiorimages/bedroom1.jpg" alt="Bedroom" class="accordion-image">
+					<img src="interiorimages/bedroom2.jpg" alt="Bedroom" class="accordion-image">
+					<img src="interiorimages/bedroom3.jpg" alt="Bedroom" class="accordion-image">
+					<img src="interiorimages/bedroom4.jpg" alt="Bedroom" class="accordion-image">
+				</div>
+				<h5><strong>Functional Home Office Furniture</strong></h5>
+				<div>
+					<span class="lead">In today's dynamic work environment, a well-designed home office is essential. Our ergonomic and stylish home office furniture ensures you work in comfort and style, enhancing your productivity.</span>
+				</div>
+				<div class="carousel" data-items="3" data-dots="false"> 
+					<img src="interiorimages/homeoffice1.jpg" alt="Homeoffice" class="accordion-image">
+					<img src="interiorimages/homeoffice2.jpg" alt="Homeoffice" class="accordion-image">
+					<img src="interiorimages/homeoffice3.jpg" alt="Homeoffice" class="accordion-image">
+					<img src="interiorimages/homeoffice4.jpg" alt="Homeoffice" class="accordion-image">
+				</div>
+				<h5><strong>Outdoor Living Essentials</strong></h5>
+				<div>
+					<span class="lead">Extend your living spaces outdoors with our outdoor furniture collections. From cozy patio sets to durable and weather-resistant materials, our outdoor furniture lets you embrace the great outdoors with sophistication.</span>
+				</div>
+				<div class="carousel" data-items="3" data-dots="false"> 
+					<img src="interiorimages/outdoor1.jpg" alt="Outdoor" class="accordion-image">
+					<img src="interiorimages/outdoor2.jpg" alt="Outdoor" class="accordion-image">
+					<img src="interiorimages/outdoor3.jpg" alt="Outdoor" class="accordion-image">
+					<img src="interiorimages/outdoor4.jpg" alt="Outdoor" class="accordion-image">
+				</div>
+				<h4>Quality and Craftsmanship</h4>
+				<div>
+					<span class="lead">Our commitment to quality is unwavering. Each piece of furniture in our collection is carefully selected for its durability, materials, and design. Our furniture craftsmen pay meticulous attention to detail, ensuring that every item is not only visually appealing but also built to last.</span>
+				</div>	
+				<div class="carousel" data-items="3" data-dots="false"> 
+					<img src="interiorimages/quality1.jpg" alt="Quality" class="accordion-image">
+					<img src="interiorimages/quality2.jpg" alt="Quality" class="accordion-image">
+					<img src="interiorimages/quality3.jpg" alt="Quality" class="accordion-image">
+					<img src="interiorimages/quality4.jpg" alt="Quality" class="accordion-image">
+				</div>	
+				<h4>Customization Options</h4>
+				<div>
+					<span class="lead">At Kwality Glass and Interiors, we understand that your spaces are unique. That's why we offer customization options to tailor your furniture to your specific preferences. From fabric choices to finishes, our team is here to bring your vision to life.</span>
+				</div>				
+			</div>
+		</div>
 			</main>
 		</div>
 
