Added sidebar for serices

--- a/services.html
+++ b/services.html
@@ -101,62 +101,83 @@
 					Our services are carefully crafted to elevate your living and working spaces to new heights of
 					elegance and functionality. With a commitment to quality, innovation, and client satisfaction, we
 					offer a diverse range of services that cater to your unique design needs.<br><br>
-					<div>
-						<h4 id="glasssolutions">Custom Glass Solutions</h4>
+				</div>
+			</main>
+		</div>
+
+
+
+
+
+
+
+
+
+
+
+
+		<section id="page-content" class="sidebar-left">
+            <div class="container">
+                <div class="row">
+                    <!-- post content -->
+                    <div class="content col-lg-9">
 						<div>
-							<span class="lead">Elevate your spaces with the enchanting allure of custom glass. Our expert craftsmen specialize in creating bespoke glass solutions that capture your imagination. From stunning glass partitions and railings to breathtaking stained glass designs and frameless shower enclosures, our glasswork adds a touch of sophistication to any environment.</span>
-						</div>
-						<div class="carousel" data-items="3" data-dots="false"> 
-							<img src="interiorimages/customglass1.jpg" alt="Custom Glass" class="accordion-image">
-							<img src="interiorimages/customglass2.jpg" alt="Custom Glass" class="accordion-image">
-							<img src="interiorimages/customglass3.jpg" alt="Custom Glass" class="accordion-image">
-							<img src="interiorimages/customglass4.jpg" alt="Custom Glass" class="accordion-image">
-						</div>
-					</div><br>
-					<div>
-						<h4 id="interiordesignexcellence">Interior Design Excellence</h4>
+							<h4 id="glasssolutions">Custom Glass Solutions</h4>
+							<div>
+								<span class="lead">Elevate your spaces with the enchanting allure of custom glass. Our expert craftsmen specialize in creating bespoke glass solutions that capture your imagination. From stunning glass partitions and railings to breathtaking stained glass designs and frameless shower enclosures, our glasswork adds a touch of sophistication to any environment.</span>
+							</div>
+							<div class="carousel" data-items="3" data-dots="false"> 
+								<img src="interiorimages/customglass1.jpg" alt="Custom Glass" class="accordion-image">
+								<img src="interiorimages/customglass2.jpg" alt="Custom Glass" class="accordion-image">
+								<img src="interiorimages/customglass3.jpg" alt="Custom Glass" class="accordion-image">
+								<img src="interiorimages/customglass4.jpg" alt="Custom Glass" class="accordion-image">
+							</div>
+						</div><br>
 						<div>
-							<span class="lead">Our talented interior designers are passionate about curating spaces that resonate with your lifestyle and aspirations. We go beyond aesthetics to ensure that your interiors are not just beautiful but also practical and tailored to your needs. Whether it's a residential makeover, a commercial transformation, or a hospitality project, our interior design expertise shines through in every detail.</span>
-						</div>
-						<div class="carousel" data-items="3" data-dots="false"> 
-							<img src="interiorimages/interior3.jpg" alt="Interior Design" class="accordion-image">
-							<img src="interiorimages/interior5.jpg" alt="Interior Design" class="accordion-image">
-							<img src="interiorimages/interior7.jpg" alt="Interior Design" class="accordion-image">
-							<img src="interiorimages/interior2.jpg" alt="Interior Design" class="accordion-image">
-						</div>
-					</div><br>
-					<div>
-						<h4 id="innovation">Innovation and Creativity</h4>
+							<h4 id="craftsmanship">Craftsmanship and Quality Assurance</h4>
+							<div>
+								<span class="lead">Quality is the cornerstone of our services. Our skilled craftsmen bring your vision to life with precision and attention to detail. We source the finest materials and adhere to the highest industry standards, ensuring that our work not only meets but exceeds your expectations.</span>
+							</div>
+							<div class="carousel" data-items="3" data-dots="false"> 
+								<img src="interiorimages/craftsmanship1.jpg" alt="Craftsmanship" class="accordion-image">
+								<img src="interiorimages/craftsmanship2.jpg" alt="Craftsmanship" class="accordion-image">
+								<img src="interiorimages/craftsmanship3.jpg" alt="Craftsmanship" class="accordion-image">
+								<img src="interiorimages/craftsmanship4.jpg" alt="Craftsmanship" class="accordion-image">
+							</div>
+						</div><br>
+						<hr>
 						<div>
-							<span class="lead">At Kwality Glass and Interiors, we thrive on innovation and creativity. We continuously explore new design trends and materials, pushing the boundaries to deliver innovative, one-of-a-kind solutions. Our commitment to staying at the forefront of design allows us to offer you the latest and best in the world of interiors and glasswork.</span>
-						</div>
-						<div class="carousel" data-items="3" data-dots="false"> 
-							<img src="interiorimages/innovation1.jpg" alt="Innovation" class="accordion-image">
-							<img src="interiorimages/innovation2.jpg" alt="Innovation" class="accordion-image">
-							<img src="interiorimages/innovation3.jpg" alt="Innovation" class="accordion-image">
-							<img src="interiorimages/innovation4.jpg" alt="Innovation" class="accordion-image">
-						</div>
-					</div><br>
-					<div>
-						<h4 id="craftsmanship">Craftsmanship and Quality Assurance</h4>
+							<h4 id="interiordesignexcellence">Interior Design Excellence</h4>
+							<div>
+								<span class="lead">Our talented interior designers are passionate about curating spaces that resonate with your lifestyle and aspirations. We go beyond aesthetics to ensure that your interiors are not just beautiful but also practical and tailored to your needs. Whether it's a residential makeover, a commercial transformation, or a hospitality project, our interior design expertise shines through in every detail.</span>
+							</div>
+							<div class="carousel" data-items="3" data-dots="false"> 
+								<img src="interiorimages/interior3.jpg" alt="Interior Design" class="accordion-image">
+								<img src="interiorimages/interior5.jpg" alt="Interior Design" class="accordion-image">
+								<img src="interiorimages/interior7.jpg" alt="Interior Design" class="accordion-image">
+								<img src="interiorimages/interior2.jpg" alt="Interior Design" class="accordion-image">
+							</div>
+						</div><br>
 						<div>
-							<span class="lead">Quality is the cornerstone of our services. Our skilled craftsmen bring your vision to life with precision and attention to detail. We source the finest materials and adhere to the highest industry standards, ensuring that our work not only meets but exceeds your expectations.</span>
-						</div>
-						<div class="carousel" data-items="3" data-dots="false"> 
-							<img src="interiorimages/craftsmanship1.jpg" alt="Craftsmanship" class="accordion-image">
-							<img src="interiorimages/craftsmanship2.jpg" alt="Craftsmanship" class="accordion-image">
-							<img src="interiorimages/craftsmanship3.jpg" alt="Craftsmanship" class="accordion-image">
-							<img src="interiorimages/craftsmanship4.jpg" alt="Craftsmanship" class="accordion-image">
-						</div>
-					</div><br>
-					<div>
-						<h4 id="clientcentric">Client-Centric Approach</h4>
+							<h4 id="innovation">Innovation and Creativity</h4>
+							<div>
+								<span class="lead">At Kwality Glass and Interiors, we thrive on innovation and creativity. We continuously explore new design trends and materials, pushing the boundaries to deliver innovative, one-of-a-kind solutions. Our commitment to staying at the forefront of design allows us to offer you the latest and best in the world of interiors and glasswork.</span>
+							</div>
+							<div class="carousel" data-items="3" data-dots="false"> 
+								<img src="interiorimages/innovation1.jpg" alt="Innovation" class="accordion-image">
+								<img src="interiorimages/innovation2.jpg" alt="Innovation" class="accordion-image">
+								<img src="interiorimages/innovation3.jpg" alt="Innovation" class="accordion-image">
+								<img src="interiorimages/innovation4.jpg" alt="Innovation" class="accordion-image">
+							</div>
+						</div><br>
 						<div>
-							<span class="lead">Your satisfaction is our top priority. We collaborate closely with you throughout the design and installation process, ensuring that your unique vision is fully realized. Our client-centric approach means that your needs, preferences, and feedback guide every aspect of our services.</span>
-						</div>
-					</div><br>
-				
-				<h4 id="furniture">Discover Exceptional Furniture at Kwality Glass and Interiors</h4>
+							<h4 id="clientcentric">Client-Centric Approach</h4>
+							<div>
+								<span class="lead">Your satisfaction is our top priority. We collaborate closely with you throughout the design and installation process, ensuring that your unique vision is fully realized. Our client-centric approach means that your needs, preferences, and feedback guide every aspect of our services.</span>
+							</div>
+						</div><br>
+						<hr>
+						<h4 id="furniture">Discover Exceptional Furniture at Kwality Glass and Interiors</h4>
 				<div>
 					<span class="lead">At Kwality Glass and Interiors, we believe that furniture is more than just functional pieces; it's an integral part of your living spaces, reflecting your style, comfort, and personality. Our carefully curated collection of furniture combines aesthetics, craftsmanship, and functionality to enhance the beauty and functionality of your interiors.</span>
 				</div>
@@ -224,11 +245,48 @@
 				<h4>Customization Options</h4>
 				<div>
 					<span class="lead">At Kwality Glass and Interiors, we understand that your spaces are unique. That's why we offer customization options to tailor your furniture to your specific preferences. From fabric choices to finishes, our team is here to bring your vision to life.</span>
-				</div>				
-			</div>
-		</div>
-			</main>
-		</div>
+				</div>
+						<hr>
+					</div>
+                    <!-- end: post content -->
+                    <!-- Sidebar-->
+                    <div class="sidebar sticky-sidebar col-lg-3">
+                        <!--Navigation-->
+                        <div class="widget ">
+                            <h4 class="widget-title">Navigator</h4>
+                            <div id="mainMenu" class="menu-vertical">
+                                <div class="container">
+                                    <nav>
+                                        <ul>
+                                            <li class="active">
+                                                <a class="scroll-to" href="#glasssolutions">Glass Innovations</a>
+                                            </li>
+                                            <li><a class="scroll-to" href="#interiordesignexcellence">Interior</a>
+                                            </li>
+                                            <li><a class="scroll-to" href="#furniture">Furniture</a>
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end: Navigation-->
+                    </div>
+                    <!-- end: Sidebar-->
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+
+
+
 
 		<div class="seperator m-b-0"></div>
 
