--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="INSPIRO" />    
-	<meta name="description" content="Themeforest Template Polo">
+	<meta name="author" content="INSPIRO" />
+    <meta name="description" content="Elevate Your Space with Kwality Glass and Interiors: We specialize in top-tier glass solutions and interior design services. Discover a world of possibilities with our custom glass installations, innovative interior designs, and expert craftsmanship. Transform your living and working spaces into stunning, functional works of art.">
     <link rel="icon" type="image/png" href="images/favicon.jpg">   
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Document title -->
